# Aka

./: .editorconfig  .gitignore  .gitmodules  Aka.sln  CMakeLists.txt  Engine.sln  README.md
Aka/: Aka.vcxproj  Aka.vcxproj.filters  Game.cpp  Game.h  PlatformBackend.h  PlatformGLFW3.cpp  main.cpp
Aka/Audio/: AudioBackend.cpp  AudioDecoder.h  AudioDecoderMp3.cpp  AudioDecoderMp3.h  AudioPlayer.cpp  AudioPlayer.h  RtAudioBackend.cpp
Aka/Component/: Animator.cpp  Animator.h  Camera2D.h  Coin.h  Collider2D.cpp  Collider2D.h  Interact.h  Player.h  Text.h  TileLayer.cpp  TileLayer.h  TileMap.h  Transform2D.cpp  Transform2D.h
Aka/Core/: Application.cpp  Application.h  Component.h  Debug.cpp  Entity.cpp  Event.cpp  Event.h  Font.cpp  Font.h  Geometry.h  OgmoWorld.h  Shape2D.h  Sprite.h  System.cpp  System.h  World.cpp  World.h
Aka/Game/: Game.cpp  Game.h  OgmoWorld.cpp  OgmoWorld.h
Aka/Graphic/: Backbuffer.h  Batch.cpp  Batch.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GraphicBackend.cpp  GraphicBackend.h  Mesh.cpp  Mesh.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  ShaderMaterial.cpp  ShaderMaterial.h  Texture.cpp  Texture.h
Aka/OS/: FileSystem.cpp  FileSystem.h  Image.cpp  Image.h  ImagePacker.cpp  ImagePacker.h  Logger.cpp  Logger.h  Platform.h  Time.cpp  Time.h
Aka/Platform/: Input.cpp  Input.h  InputBackend.h  Platform.h  PlatformBackend.h  PlatformGLFW3.cpp  Time.h  Window.cpp  Window.h
Aka/System/: AnimatorSystem.cpp  AnimatorSystem.h  CameraSystem.cpp  CameraSystem.h  CoinSystem.cpp  CoinSystem.h  CollisionSystem.cpp  CollisionSystem.h  PhysicSystem.cpp  PhysicSystem.h  PlayerSystem.cpp  PlayerSystem.h  SoundSystem.cpp  SoundSystem.h  TextRenderSystem.cpp  TextRenderSystem.h  TileMapSystem.cpp  TileMapSystem.h  TileRenderSystem.cpp  TileRenderSystem.h
Engine/: Animator.cpp  Animator.h  AnimatorSystem.cpp  AnimatorSystem.h  Application.h  Batch.cpp  Batch.h  Camera2D.cpp  Camera2D.h  CameraSystem.cpp  CameraSystem.h  Collider2D.cpp  Collider2D.h  Component.cpp  Component.h  CustomApp.cpp  CustomApp.h  Debug.cpp  Debug.h  Engine.vcxproj  Engine.vcxproj.filters  Entity.cpp  Entity.h  FileSystem.cpp  FileSystem.h  Font.cpp  Font.h  FontRenderer.cpp  FontRenderer.h  Framebuffer.h  GLBackbuffer.cpp  GLBackend.cpp  GLBackend.h  GLFont.cpp  GLFont.h  GLFontRenderer.cpp  GLFontRenderer.h  GLFramebuffer.cpp  GLMesh.cpp  GLRenderPass.cpp  (+63 more)
Engine/Engine/: Application.h  CustomApp.cpp  Engine.vcxproj  Engine.vcxproj.filters  GLBackend.cpp  GLBackend.h  GLFramebuffer.cpp  GLFramebuffer.h  GLShader.cpp  GLTexture.cpp  GLTexture.h  GraphicBackend.h  Image.cpp  Input.cpp  Input.h  Platform.h  Shader.h  Texture.h  Window.cpp  imgui.ini  main.cpp
Game/: Game.cpp  Game.h  Game.vcxproj  Game.vcxproj.filters  OgmoWorld.cpp  OgmoWorld.h  Resources.cpp  Resources.h
Game/Component/: Animator.cpp  Animator.h  Camera2D.h  Coin.h  Collider2D.h  Door.h  Player.h  Text.h  TileLayer.h  TileMap.cpp  TileMap.h  Transform2D.cpp  Transform2D.h
Game/GUI/: EntityWidget.cpp  EntityWidget.h  GUINode.cpp  GUINode.h  InfoWidget.cpp  InfoWidget.h  Modal.cpp  Modal.h  ResourcesWidget.cpp  ResourcesWidget.h
Game/Game/: Game.cpp  Game.h  Level.cpp  Level.h  OgmoWorld.cpp  Resources.h
Game/System/: AnimatorSystem.cpp  AnimatorSystem.h  CameraSystem.cpp  CameraSystem.h  CoinSystem.cpp  CoinSystem.h  CollisionSystem.cpp  CollisionSystem.h  PhysicSystem.cpp  PhysicSystem.h  PlayerSystem.cpp  PlayerSystem.h  SoundSystem.cpp  SoundSystem.h  TextRenderSystem.cpp  TextRenderSystem.h  TileMapSystem.cpp  TileMapSystem.h  TileRenderSystem.cpp  TileRenderSystem.h
ModelViewer/: ModelViewer.cpp  ModelViewer.h  ModelViewer.vcxproj  ModelViewer.vcxproj.filters  main.cpp
ModelViewer/Model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
asset/levels/: level0.json  level1.json  world.ogmo
asset/shaders/: font.frag  sprite.frag  sprite.vert  world.frag  world.vert
asset/textures/: background.psd  character.psd
include/Aka/: Aka.h
lib/entt/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/imgui/src/backends/: imgui_impl_vulkan.cpp
lib/json/: CMakeLists.txt
lib/lua/: CMakeLists.txt
lib/minimp3/: CMakeLists.txt  minimp3.h
lib/miniz/: CMakeLists.txt
lib/renderdoc/: CMakeLists.txt
lib/rtaudio/: CMakeLists.txt
lib/stb/: CMakeLists.txt
lib/utf8/: CMakeLists.txt
src/Audio/: AudioBackend.cpp  AudioDevice.cpp  AudioStream.cpp  AudioStreamMemory.cpp  AudioStreamMp3.cpp  RtAudioBackend.cpp
src/Core/: Application.cpp  Aseprite.cpp  BitField.cpp  Bitmask.cpp  Config.cpp  Controller.cpp  Debug.cpp  Encoding.cpp  Font.cpp  Hash.cpp  Layer.cpp  Physic.cpp  Router.cpp  Shape2D.cpp  Sprite.cpp  String.cpp  View.cpp
src/Drawing/: Batch2D.cpp  Batch3D.cpp  Renderer2D.cpp  Renderer3D.cpp
src/Graphic/: Backbuffer.cpp  Batch.cpp  Batch2D.cpp  Batch3D.cpp  Buffer.cpp  Compiler.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Fence.cpp  Framebuffer.cpp  GraphicBackend.cpp  GraphicDevice.cpp  Instance.cpp  Material.cpp  Mesh.cpp  PhysicalDevice.cpp  Pipeline.cpp  Program.cpp  RenderPass.cpp  Renderer2D.cpp  Renderer3D.cpp  Resource.cpp  Sampler.cpp  Shader.cpp  ShaderMaterial.cpp  Surface.cpp  Swapchain.cpp  Texture.cpp  Texture2D.cpp  Texture2DArray.cpp  Texture2DMultisample.cpp  TextureCubeMap.cpp
src/Layer/: ImGuiLayer.cpp
src/Memory/: Allocator.cpp  AllocatorTracker.cpp  Memory.cpp
src/OS/: Archive.cpp  Endian.cpp  FileSystem.cpp  Image.cpp  ImagePacker.cpp  Logger.cpp  OS.cpp  Packer.cpp  Path.cpp  Time.cpp
src/Platform/: Input.cpp  PlatformDevice.cpp  PlatformGLFW3.cpp  PlatformLinux.cpp  PlatformView.cpp  PlatformWindow.cpp  PlatformWindows.cpp
src/Renderer/: Instance.cpp  InstanceRenderer.cpp  Renderer.cpp
src/Rendering/: Material.cpp  Mesh.cpp
src/Resource/: Asset.cpp  AssetImporter.cpp  AssetLibrary.cpp  AssetPath.cpp  AssetRegistry.cpp  AudioStorage.cpp  BufferStorage.cpp  FontStorage.cpp  MeshStorage.cpp  ProgramManager.cpp  Resource.cpp  ResourceArchive.cpp  ResourceManager.cpp  TextureStorage.cpp
src/Scene/: Camera.cpp  Component.cpp  Node.cpp  (+10 more)
(+470 files in other folders)
